2012-06-08  Vladimir Makarov  <vmakarov@redhat.com>

	* emit-rtl.c (validate_subreg): Don't check offset for LRA and
	floating point modes.

	* lra.c (lra): Call lra_hard_reg_substitution after resetting
	lra_in_progress.

	* lra-constraints.c (match_reload): Unshare new regs.

2012-06-08  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-assigns.c: Add 2012 to copyright header.  Use lra_assert
	instead of gcc_assert.

	* lra-coalesce.c: Ditto.

	* lra-eliminations.c: Ditto.

	* lra-equivs.c: Ditto.

	* lra-lives.c: Ditto.

	* lra-spills.c: Ditto.

	* lra.c: Ditto.
	(insn_recog_data_len): Rename to lra_insn_recog_data_len.
	(insn_recog_data): Rename to lra_insn_recog_data.
	(lra_get_insn_recog_data): Rename to lra_set_insn_recog_data.
	Remove code for accessing cached value.

	* lra-constraints.c: Add 2012 to copyright header.  Use lra_assert
	instead of gcc_assert.
	(check_and_process_move): Remove unnecessary side_effects_p call.

	* lra-int.h: Ditto.
	(lra_assert): Define it.
	(lra_insn_recog_data_len, lra_insn_recog_data): New externals.
	(lra_get_insn_recog_data): Rename to lra_set_insn_recog_data.
	(lra_get_insn_recog_data): New inline function.

	* lra.h: Add 2012 to copyright.

2012-06-07  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (split_reg): Fix comments and printing debug
	titles.
	(inherit_in_ebb): Check barrier too.

2012-06-01  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (struct usage_insns): Use registers instead
	pseudos in comments about splitting.
	(check_only_pseudos): Rename to check_only_regs.
	(need_for_call_save_p): Assert that argument is a pseudo regno.
	(need_for_split_p): Process hard reg too.
	(split_pseudo): Rename to split_reg, process hard reg too.
	(live_pseudos): Rename to live_regs.
	(inherit_in_ebb): Process hard regs too for splitting.
	(get_pseudo_regno): Rename to get_regno.  Process hard reg too.
	(remove_inheritance_pseudos): Process hard regs too.
	(lra_undo_inheritance): Ditto.
